[tool.poetry]
name = "cordbot"
version = "0.1.0"
description = ""
authors = ["celeste <parafactual@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"
"discord.py" = "^2.1.0"
wonderwords = "^2.2.0"
python-dotenv = "^0.21.0"
replicate = "^0.4.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
